all tasks completed for final project

--- a/DeepanshuExercise/Final Project/IMPML_Week11_Students.ipynb
+++ b/DeepanshuExercise/Final Project/IMPML_Week11_Students.ipynb
@@ -4820,13 +4820,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 66,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:46:52.846158Z",
+     "start_time": "2021-03-11T06:46:52.760755Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "y = \n",
-    "X = \n",
-    "X_train, X_test, y_train, y_test = \n"
+    "X = df.iloc[:,:-1]\n",
+    "y = df.iloc[:,-1]\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X,y, test_size=0.3, random_state=42)\n"
    ]
   },
   {
@@ -4846,11 +4851,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 67,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:47:56.191856Z",
+     "start_time": "2021-03-11T06:47:56.177432Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "dt = "
+    "dt = DecisionTreeClassifier(max_depth = 12)"
    ]
   },
   {
@@ -4864,12 +4874,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 68,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:49:32.610384Z",
+     "start_time": "2021-03-11T06:49:32.007028Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "dt_model = \n",
-    "y_pred_dt ="
+    "dt_model = dt.fit(X = X_train, y = y_train)\n",
+    "y_pred_dt = dt_model.predict(X_test)"
    ]
   },
   {
@@ -4881,12 +4896,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 69,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:50:07.812424Z",
+     "start_time": "2021-03-11T06:50:07.760843Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Decision Tree Model - reservation_status excluded\n",
+      "Accuracy Score: 0.8490931008382159\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[20214  2139]\n",
+      " [ 3244 10074]]\n",
+      "\n",
+      "AUC Score: 0.830364014711402\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print('Decision Tree Model - reservation_status excluded')\n",
     "\n",
+    "print('Accuracy Score: {}\\n\\nConfusion Matrix:\\n {}\\n\\nAUC Score: {}'\n",
+    "      .format(accuracy_score(y_test,y_pred_dt), confusion_matrix(y_test,y_pred_dt), roc_auc_score(y_test,y_pred_dt)))\n",
     "print()"
    ]
   },
@@ -4896,7 +4934,8 @@
    "source": [
     "How did this model perform compared to the one used in Part 6?\n",
     "\n",
-    "**DOUBLE CLICK ON THIS CELL TO TYPE YOUR ANSWER**\n"
+    "**DOUBLE CLICK ON THIS CELL TO TYPE YOUR ANSWER**\n",
+    "Here the accuracy is less when compared to included one"
    ]
   },
   {
@@ -4918,12 +4957,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 70,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:50:57.086526Z",
+     "start_time": "2021-03-11T06:50:57.074549Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from  import \n",
-    "knn = KNeighborsClassifier()"
+    "from sklearn.neighbors  import KNeighborsClassifier \n",
+    "knn = KNeighborsClassifier(n_neighbors=10, p=1)"
    ]
   },
   {
@@ -4937,12 +4981,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 71,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:51:40.077015Z",
+     "start_time": "2021-03-11T06:51:28.542459Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "knn_model = \n",
-    "y_pred_knn ="
+    "knn_model = knn.fit(X_train, y_train)\n",
+    "y_pred_knn = knn_model.predict(X_test)"
    ]
   },
   {
@@ -4954,11 +5003,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:51:48.462936Z",
+     "start_time": "2021-03-11T06:51:48.408171Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K-Nearest Neighbors\n",
+      "Accuracy Score: 0.809733396877015\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[20090  2263]\n",
+      " [ 4524  8794]]\n",
+      "\n",
+      "AUC Score: 0.7795350742469394\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print('K-Nearest Neighbors')\n",
+    "print('Accuracy Score: {}\\n\\nConfusion Matrix:\\n {}\\n\\nAUC Score: {}'\n",
+    "      .format(accuracy_score(y_test,y_pred_knn), confusion_matrix(y_test,y_pred_knn), roc_auc_score(y_test,y_pred_knn)))\n",
     "\n",
     "print()"
    ]
@@ -4993,12 +5065,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 73,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:52:50.612798Z",
+     "start_time": "2021-03-11T06:52:50.601879Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "from  import \n",
-    "nb  =  "
+    "from sklearn.naive_bayes import GaussianNB \n",
+    "nb  =  GaussianNB()"
    ]
   },
   {
@@ -5012,12 +5089,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 74,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:53:14.695111Z",
+     "start_time": "2021-03-11T06:53:14.511405Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "nb_model = \n",
-    "y_pred_nb ="
+    "nb_model = nb.fit(X_train, y_train)\n",
+    "y_pred_nb = nb_model.predict(X_test)"
    ]
   },
   {
@@ -5029,11 +5111,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 75,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-11T06:53:30.934741Z",
+     "start_time": "2021-03-11T06:53:30.879736Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Naïve Bayes\n",
+      "Accuracy Score: 0.586582938521488\n",
+      "\n",
+      "Confusion Matrix:\n",
+      " [[ 9628 12725]\n",
+      " [ 2022 11296]]\n",
+      "\n",
+      "AUC Score: 0.6394502920070604\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "print('Naïve Bayes')\n",
+    "print('Accuracy Score: {}\\n\\nConfusion Matrix:\\n {}\\n\\nAUC Score: {}'\n",
+    "      .format(accuracy_score(y_test,y_pred_nb), confusion_matrix(y_test,y_pred_nb), roc_auc_score(y_test,y_pred_nb)))\n",
     "\n",
     "print()"
    ]
@@ -5061,7 +5166,7 @@
     "\n",
     "**DOUBLE CLICK ON THIS CELL TO TYPE YOUR ANSWER**\n",
     "\n",
-    "\n",
+    "Decision Tree model is best performing one\n",
     "\n"
    ]
   },
@@ -5072,7 +5177,9 @@
     "\n",
     "Based on all the results obtained above, which algorithm seems to make the least accurate prediction?\n",
     "\n",
-    "**DOUBLE CLICK ON THIS CELL TO TYPE YOUR ANSWER**"
+    "**DOUBLE CLICK ON THIS CELL TO TYPE YOUR ANSWER**\n",
+    "\n",
+    "Naive Bayes Algorithm"
    ]
   },
   {
