--- a/learn_OCR/Untitled.ipynb
+++ b/learn_OCR/Untitled.ipynb
@@ -1,6 +1,135 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-17T09:20:44.946956Z",
+     "start_time": "2021-03-17T09:20:40.948882Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "import easyocr\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-17T09:28:44.844920Z",
+     "start_time": "2021-03-17T09:28:44.824255Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "license_plate_image = 'license_plate_image.jpg'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-03-17T09:29:13.221957Z",
+     "start_time": "2021-03-17T09:29:13.205236Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def recognize_text(img_path):\n",
+    "    '''loads an image and recognizes text.'''\n",
+    "    \n",
+    "    reader = easyocr.Reader(lang_list=['en'])\n",
+    "    return reader.readtext(img_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2021-03-17T09:29:49.552Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "CUDA not available - defaulting to CPU. Note: This module is much faster with a GPU.\n",
+      "Downloading detection model, please wait. This may take several minutes depending upon your network connection.\n",
+      "Downloading recognition model, please wait. This may take several minutes depending upon your network connection.\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = recognize_text(license_plate_image)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.10"
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 4
 }
