recognize license plate

--- a/learn_OCR/Untitled.ipynb
+++ b/learn_OCR/Untitled.ipynb
@@ -52,10 +52,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2021-03-17T09:29:49.552Z"
+     "end_time": "2021-03-17T09:33:22.083906Z",
+     "start_time": "2021-03-17T09:29:49.556678Z"
     }
    },
    "outputs": [
@@ -67,6 +68,39 @@
       "Downloading detection model, please wait. This may take several minutes depending upon your network connection.\n",
       "Downloading recognition model, please wait. This may take several minutes depending upon your network connection.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[([[1824, 342], [1920, 342], [1920, 381], [1824, 381]],\n",
+       "  'PTSuBr',\n",
+       "  0.006745545193552971),\n",
+       " ([[891.1715728752538, 344.1715728752538],\n",
+       "   [1001.5992564287848, 326.2549059739225],\n",
+       "   [1005.8284271247462, 359.8284271247462],\n",
+       "   [895.4007435712152, 377.7450940260775]],\n",
+       "  'AXI9',\n",
+       "  0.3075830340385437),\n",
+       " ([[544, 1040], [713, 1040], [713, 1133], [544, 1133]],\n",
+       "  '|153',\n",
+       "  0.495274156332016),\n",
+       " ([[703.7852532131767, 1042.06727891859],\n",
+       "   [824.7553551254679, 1061.917378001857],\n",
+       "   [807.2147467868233, 1153.93272108141],\n",
+       "   [686.2446448745321, 1134.082621998143]],\n",
+       "  '154',\n",
+       "  0.8405063152313232),\n",
+       " ([[537, 1061], [549, 1061], [549, 1077], [537, 1077]],\n",
+       "  'u',\n",
+       "  0.8109002113342285),\n",
+       " ([[535, 1075], [549, 1075], [549, 1091], [535, 1091]],\n",
+       "  'B',\n",
+       "  0.7762506604194641)]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
