--- a/zero_to_gans_in_pytorch/Untitled.ipynb
+++ b/zero_to_gans_in_pytorch/Untitled.ipynb
@@ -25,11 +25,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T17:57:57.603378Z",
+     "start_time": "2021-04-22T17:57:57.586819Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(5.)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# number tensor\n",
+    "tensor_1 = torch.tensor(data = 5.0)\n",
+    "tensor_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T17:57:58.590958Z",
+     "start_time": "2021-04-22T17:57:58.572167Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_1.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:09:04.047898Z",
+     "start_time": "2021-04-22T18:09:04.032710Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# vector tensor\n",
+    "tensor_2 = torch.tensor(data = list(range(1,10)))\n",
+    "tensor_2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensor_1 = torch.tensor(data = )"
+    "tensor_2.dtype"
    ]
   }
  ],
