tensor property of all elements of single dtype

--- a/zero_to_gans_in_pytorch/Untitled.ipynb
+++ b/zero_to_gans_in_pytorch/Untitled.ipynb
@@ -77,38 +77,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-22T18:09:04.047898Z",
-     "start_time": "2021-04-22T18:09:04.032710Z"
+     "end_time": "2021-04-22T18:10:24.818691Z",
+     "start_time": "2021-04-22T18:10:24.808067Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9])"
+       "tensor([1, 2, 3, 4])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# vector tensor\n",
-    "tensor_2 = torch.tensor(data = list(range(1,10)))\n",
+    "tensor_2 = torch.tensor(data = list(range(1,5)))\n",
     "tensor_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:10:27.305942Z",
+     "start_time": "2021-04-22T18:10:27.285043Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "tensor_2.dtype"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Here if the"
    ]
   }
  ],
