tensor with matrix

--- a/zero_to_gans_in_pytorch/Untitled.ipynb
+++ b/zero_to_gans_in_pytorch/Untitled.ipynb
@@ -131,7 +131,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Here if the"
+    "* Here if the first element is a float, all the elements are converted to float, all the elements can only be of one data type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:11:52.755311Z",
+     "start_time": "2021-04-22T18:11:52.730713Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1., 2., 4., 5.])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_2 = torch.tensor(data = [1.0,2,4,5])\n",
+    "tensor_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:12:00.508932Z",
+     "start_time": "2021-04-22T18:12:00.490741Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.float32"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tensor_2.dtype"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# matrix\n",
+    "tensor_3 =  torch.tensor([[1,2],\n",
+    "                          [3,4]])"
    ]
   }
  ],
