--- a/zero_to_gans_in_pytorch/Untitled.ipynb
+++ b/zero_to_gans_in_pytorch/Untitled.ipynb
@@ -187,13 +187,43 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:13:50.756690Z",
+     "start_time": "2021-04-22T18:13:50.738856Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 2.],\n",
+       "        [3., 4.],\n",
+       "        [5., 6.]])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# matrix\n",
+    "tensor_3 =  torch.tensor([[1,2.],\n",
+    "                          [3,4],\n",
+    "                          [5,6]])\n",
+    "tensor_3"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# matrix\n",
-    "tensor_3 =  torch.tensor([[1,2],\n",
-    "                          [3,4]])"
+    "# 3 - dimensional array\n",
+    "te"
    ]
   }
  ],
