length of the tensor

--- a/zero_to_gans_in_pytorch/Untitled.ipynb
+++ b/zero_to_gans_in_pytorch/Untitled.ipynb
@@ -218,12 +218,158 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:16:08.911736Z",
+     "start_time": "2021-04-22T18:16:08.889854Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[[ 1.,  2.],\n",
+       "         [ 3.,  4.],\n",
+       "         [ 5.,  6.]],\n",
+       "\n",
+       "        [[10., 20.],\n",
+       "         [30., 40.],\n",
+       "         [50., 60.]]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3 - dimensional array\n",
+    "tensor_4 = torch.tensor([[[1,2.],\n",
+    "                          [3,4],\n",
+    "                          [5,6]],\n",
+    "                       [[10,20.],\n",
+    "                          [30,40],\n",
+    "                          [50,60]]])\n",
+    "tensor_4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Length along each dimension is a property of a tensor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:20:44.937634Z",
+     "start_time": "2021-04-22T18:20:44.924977Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(5.)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(tensor_1)\n",
+    "tensor_1.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:21:00.045039Z",
+     "start_time": "2021-04-22T18:21:00.027196Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1., 2., 4., 5.])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(tensor_2)\n",
+    "tensor_2.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-22T18:21:09.905466Z",
+     "start_time": "2021-04-22T18:21:09.879976Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2.],\n",
+      "        [3., 4.],\n",
+      "        [5., 6.]])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 2])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(tensor_3)\n",
+    "tensor_3.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3 - dimensional array\n",
-    "te"
+    "print(tensor_2)\n",
+    "tensor_2.shape"
    ]
   }
  ],
