--- a/anamoly_scoring/Untitled.ipynb
+++ b/anamoly_scoring/Untitled.ipynb
@@ -1170,6 +1170,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T16:57:19.024210Z",
+     "start_time": "2021-04-26T16:57:18.998360Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.57220467466836"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "overall_mean = (df_0['value'].sum())/len(df_0)\n",
+    "overall_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
