calculate the rolling difference

--- a/anamoly_scoring/Untitled.ipynb
+++ b/anamoly_scoring/Untitled.ipynb
@@ -1196,6 +1196,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T16:59:14.530954Z",
+     "start_time": "2021-04-26T16:59:12.286764Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         NaN\n",
+       "1        -1.0\n",
+       "2         0.0\n",
+       "3        20.0\n",
+       "4       -17.0\n",
+       "         ... \n",
+       "15825    -4.0\n",
+       "15826     1.0\n",
+       "15827     3.0\n",
+       "15828   -22.0\n",
+       "15829    12.0\n",
+       "Name: value, Length: 15830, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_steps = 2\n",
+    "def my_fun(x):\n",
+    "    return x.iloc[-1] - x.iloc[0]\n",
+    "\n",
+    "df_0['value'].rolling(window=n_steps).apply(my_fun)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
