--- a/anamoly_scoring/try_anamoly.ipynb
+++ b/anamoly_scoring/try_anamoly.ipynb
@@ -1196,11 +1196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-04-26T16:59:14.530954Z",
-     "start_time": "2021-04-26T16:59:12.286764Z"
+     "end_time": "2021-04-26T17:05:09.186661Z",
+     "start_time": "2021-04-26T17:05:06.872920Z"
     }
    },
    "outputs": [
@@ -1221,12 +1221,13 @@
        "Name: value, Length: 15830, dtype: float64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# calculate rolling difference\n",
     "n_steps = 2\n",
     "def my_fun(x):\n",
     "    return x.iloc[-1] - x.iloc[0]\n",
@@ -1239,7 +1240,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_0['DA'] = df_0['value'] - "
+   ]
   }
  ],
  "metadata": {
