--- a/anamoly_scoring/try_anamoly.ipynb
+++ b/anamoly_scoring/try_anamoly.ipynb
@@ -1237,12 +1237,38 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T17:07:37.587791Z",
+     "start_time": "2021-04-26T17:07:37.551321Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_0['DA'] = df_0['value'] - overall_mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-04-26T17:14:43.413845Z",
+     "start_time": "2021-04-26T17:14:43.215169Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_0.to_csv('df_o.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df_0['DA'] = df_0['value'] - "
-   ]
+   "source": []
   }
  ],
  "metadata": {
