few features in pandas

--- a/learn_data_analytics/basics.ipynb
+++ b/learn_data_analytics/basics.ipynb
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-06T11:15:43.000240Z",
-     "start_time": "2021-05-06T11:15:42.954905Z"
+     "end_time": "2021-05-06T11:17:14.198231Z",
+     "start_time": "2021-05-06T11:17:14.160919Z"
     }
    },
    "outputs": [
@@ -30,13 +30,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shape of dataframe: (1704, 6)\n"
+      "Shape of dataframe: (1704, 6)\n",
+      "Number of rows in dataframe: 1704\n",
+      "Number of columns in dataframe: 6\n"
      ]
     }
    ],
    "source": [
     "raw_df = pd.read_csv('C:/Users/Arjun Janamatti/Downloads/gapminder-FiveYearData(1).csv')\n",
-    "print(f'Shape of dataframe: {raw_df.shape}')"
+    "print(f'Shape of dataframe: {raw_df.shape}')\n",
+    "print(f'Number of rows in dataframe: {raw_df.shape[0]}')\n",
+    "print(f'Number of columns in dataframe: {raw_df.shape[1]}')"
    ]
   },
   {
@@ -144,6 +148,67 @@
    ],
    "source": [
     "raw_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T11:18:39.695159Z",
+     "start_time": "2021-05-06T11:18:39.683521Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Column names: Index(['country', 'year', 'pop', 'continent', 'lifeExp', 'gdpPercap'], dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Column names: {raw_df.columns}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-06T11:19:13.169770Z",
+     "start_time": "2021-05-06T11:19:13.155923Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DATA TYPE OF EACH COLUMN\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "country       object\n",
+       "year           int64\n",
+       "pop          float64\n",
+       "continent     object\n",
+       "lifeExp      float64\n",
+       "gdpPercap    float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print('DATA TYPE OF EACH COLUMN')\n",
+    "raw_df.dtypes"
    ]
   },
   {
