started central tendency

--- a/learn_data_analytics/basics.ipynb
+++ b/learn_data_analytics/basics.ipynb
@@ -844,12 +844,132 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-10T12:02:44.008014Z",
+     "start_time": "2021-05-10T12:02:43.989477Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1952</td>\n",
+       "      <td>8425333.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1957</td>\n",
+       "      <td>9240934.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1962</td>\n",
+       "      <td>10267083.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1967</td>\n",
+       "      <td>11537966.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1972</td>\n",
+       "      <td>13079460.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1699</th>\n",
+       "      <td>1987</td>\n",
+       "      <td>9216418.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1700</th>\n",
+       "      <td>1992</td>\n",
+       "      <td>10704340.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1701</th>\n",
+       "      <td>1997</td>\n",
+       "      <td>11404948.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1702</th>\n",
+       "      <td>2002</td>\n",
+       "      <td>11926563.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1703</th>\n",
+       "      <td>2007</td>\n",
+       "      <td>12311143.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1704 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      year         pop\n",
+       "0     1952   8425333.0\n",
+       "1     1957   9240934.0\n",
+       "2     1962  10267083.0\n",
+       "3     1967  11537966.0\n",
+       "4     1972  13079460.0\n",
+       "...    ...         ...\n",
+       "1699  1987   9216418.0\n",
+       "1700  1992  10704340.0\n",
+       "1701  1997  11404948.0\n",
+       "1702  2002  11926563.0\n",
+       "1703  2007  12311143.0\n",
+       "\n",
+       "[1704 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_df.iloc[:, [1, 2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "raw_df.iloc[:, [1, 'pop']]"
-   ]
+   "source": []
   }
  ],
  "metadata": {
