--- a/learn_data_analytics/central_tendencies.ipynb
+++ b/learn_data_analytics/central_tendencies.ipynb
@@ -18,11 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-11T05:53:14.867640Z",
-     "start_time": "2021-05-11T05:53:14.861593Z"
+     "end_time": "2021-05-12T17:17:03.644935Z",
+     "start_time": "2021-05-12T17:17:03.635852Z"
     }
    },
    "outputs": [],
@@ -32,10 +32,21 @@
     "                  '40-under 50',\n",
     "                  '50-under 60',\n",
     "                  '60-under 70',\n",
-    "                  '70-under 80',]\n",
-    "\n",
-    "frequency = [random.randint(5,20) for n in range(len(class_interval))]\n",
-    "class_midpoint = "
+    "                  '70-under 80',]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-05-12T17:17:13.675197Z",
+     "start_time": "2021-05-12T17:17:13.666059Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "frequency = [random.randint(5,20) for n in range(len(class_interval))]"
    ]
   },
   {
