get posterior method

--- a/bayesian_made_simple/cookie_01.ipynb
+++ b/bayesian_made_simple/cookie_01.ipynb
@@ -64,167 +64,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-16T12:36:37.323686Z",
-     "start_time": "2021-05-16T12:36:37.307386Z"
+     "end_time": "2021-05-16T12:55:43.330502Z",
+     "start_time": "2021-05-16T12:55:43.304725Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.5, 0.5]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "prior_probabilities = [1/(number_of_bowls) for num in range(number_of_bowls)]\n",
-    "prior_probabilities"
+    "def get_posterior(number_of_bowls, bowl_qty_list, vanilla_bowl_list, chocolate_bowl_list):\n",
+    "    prior_probabilities = [1/(number_of_bowls) for num in range(number_of_bowls)]\n",
+    "    vanilla_unnormalized_probs = [van/bowl_qty_list[index] for index, van in enumerate(vanilla_bowl_list)] \n",
+    "    vanilla_normalized_sum  = sum(vanilla_unnormalized_probs)/ len(vanilla_unnormalized_probs)\n",
+    "    vanilla_normalized_sum_list = [vanilla_normalized_sum for van in range(len(vanilla_unnormalized_probs))]\n",
+    "    new_df = pd.DataFrame()\n",
+    "    new_df['prior_probabilities'] = prior_probabilities\n",
+    "    new_df['vanilla_unnormalized_probs'] = vanilla_unnormalized_probs\n",
+    "    new_df['vanilla_normalized_sum_list'] = vanilla_normalized_sum_list\n",
+    "    new_df.index = [f'Bowl_{num+1}' for num in range(number_of_bowls)]\n",
+    "    new_df['posterior'] = (new_df['prior_probabilities'] * new_df['vanilla_unnormalized_probs']) / new_df['vanilla_normalized_sum_list']\n",
+    "    return new_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-16T12:42:47.694156Z",
-     "start_time": "2021-05-16T12:42:47.680463Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.75, 0.5]"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vanilla_unnormalized_probs = [van/bowl_qty_list[index] for index, van in enumerate(vanilla_bowl_list)] \n",
-    "vanilla_unnormalized_probs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-16T12:47:15.952569Z",
-     "start_time": "2021-05-16T12:47:15.936100Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.625, 0.625]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "vanilla_normalized_sum  = sum(vanilla_unnormalized_probs)/ len(vanilla_unnormalized_probs)\n",
-    "vanilla_normalized_sum_list = [vanilla_normalized_sum for van in range(len(vanilla_unnormalized_probs))]\n",
-    "vanilla_normalized_sum_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-16T12:48:00.313203Z",
-     "start_time": "2021-05-16T12:48:00.296899Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>prior_probabilities</th>\n",
-       "      <th>vanilla_unnormalized_probs</th>\n",
-       "      <th>vanilla_normalized_sum_list</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Bowl_1</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.75</td>\n",
-       "      <td>0.625</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Bowl_2</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.625</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        prior_probabilities  vanilla_unnormalized_probs  \\\n",
-       "Bowl_1                  0.5                        0.75   \n",
-       "Bowl_2                  0.5                        0.50   \n",
-       "\n",
-       "        vanilla_normalized_sum_list  \n",
-       "Bowl_1                        0.625  \n",
-       "Bowl_2                        0.625  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "new_df = pd.DataFrame()\n",
-    "new_df['prior_probabilities'] = prior_probabilities\n",
-    "new_df['vanilla_unnormalized_probs'] = vanilla_unnormalized_probs\n",
-    "new_df['vanilla_normalized_sum_list'] = vanilla_normalized_sum_list\n",
-    "new_df.index = 'Bowl_1', 'Bowl_2'\n",
-    "new_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2021-05-16T12:48:42.600539Z",
-     "start_time": "2021-05-16T12:48:42.575378Z"
+     "end_time": "2021-05-16T12:56:38.004986Z",
+     "start_time": "2021-05-16T12:56:37.982534Z"
     }
    },
    "outputs": [
@@ -284,13 +153,13 @@
        "Bowl_2                        0.625        0.4  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "new_df['posterior'] = (new_df['prior_probabilities'] * new_df['vanilla_unnormalized_probs']) / new_df['vanilla_normalized_sum_list']\n",
+    "new_df = get_posterior(number_of_bowls, bowl_qty_list, vanilla_bowl_list, chocolate_bowl_list)\n",
     "new_df"
    ]
   },
